versioned_docs/version-2.7/reference/subsystems/protoc.mdx
---
title: protoc
description: |
  The protocol buffer compiler (https://developers.google.com/protocol-buffers).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The protocol buffer compiler (https://developers.google.com/protocol-buffers).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[protoc]`</span>

<span className={styles.options}>

## Basic options

### `dependency_inference`

<Option
  cli_repr={`--[no-]protoc-dependency-inference`}
  env_repr='PANTS_PROTOC_DEPENDENCY_INFERENCE'
  toml_repr={`[protoc]
dependency_inference = <bool>`}
  default_repr={`True`}
>

Infer Protobuf dependencies on other Protobuf files by analyzing import statements.

</Option>

## Advanced options

### `known_versions`

<Option
  cli_repr={`--protoc-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PROTOC_KNOWN_VERSIONS'
  toml_repr={`[protoc]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "3.11.4|linux_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c8caecb1367bbbe409b45e28514f5be|1591191",\n  "3.11.4|macos_arm64 |8c6af11e1058efe953830ecb38324c0e0fd2fb67df3891896d138c535932e7db|2482119",\n  "3.11.4|macos_x86_64|8c6af11e1058efe953830ecb38324c0e0fd2fb67df3891896d138c535932e7db|2482119"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
  digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emmitted by
  `wc -c`

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--protoc-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_PROTOC_URL_PLATFORM_MAPPING'
  toml_repr={`[protoc.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "linux_x86_64": "linux-x86_64",\n  "macos_arm64": "osx-x86_64",\n  "macos_x86_64": "osx-x86_64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}, and run Pants on Linux with an intel architecture, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `url_template`

<Option
  cli_repr={`--protoc-url-template=<str>`}
  env_repr='PANTS_PROTOC_URL_TEMPLATE'
  toml_repr={`[protoc]
url_template = <str>`}
  default_repr={`https://github.com/protocolbuffers/protobuf/releases/download/v{version}/protoc-{version}-{platform}.zip`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a file:// URL.

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--protoc-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_PROTOC_USE_UNSUPPORTED_VERSION'
  toml_repr={`[protoc]
use_unsupported_version = <UnsupportedVersionUsage>`}
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of protoc is not supported.

Supported protoc versions: unspecified

</Option>

### `version`

<Option
  cli_repr={`--protoc-version=<str>`}
  env_repr='PANTS_PROTOC_VERSION'
  toml_repr={`[protoc]
version = <str>`}
  default_repr={`3.11.4`}
>

Use this version of protoc.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
